added style to headings and created node types for all supported html tags

--- a/testing/HTML/GuidingPrinciples.html
+++ b/testing/HTML/GuidingPrinciples.html
@@ -4,6 +4,7 @@
     <title>Guiding Principles</title>
 </head>
 <body>
+<!-- this is a comment -->
 <div>
     <h2>Gaudy Principles</h2>
     <p>Lo, all you Gaudy Developers! Lo, all you analysts and designers! Hear how to be Gaudy and be enlightened.</p>
@@ -34,7 +35,7 @@
         happiness and joy wherever they go.</p>
 </div>
 
-<hr>
+<hr/>
 
 <div>
     <h2>Guiding Principles</h2>
