Add example html pages

--- a/testing/HTML/GuidingPrinciples.html
+++ b/testing/HTML/GuidingPrinciples.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-AU">
 <head>
+    <meta charset="UTF-8">
     <title>Guiding Principles</title>
 </head>
 <body>
