changed the colours

--- a/testing/HTML/testPage.html
+++ b/testing/HTML/testPage.html
@@ -16,6 +16,7 @@
 </div>
 <hr>
 <p>this is a paragraph <span> this is a span inside the paragraph</span></p>
+<p> test emoji 😂</p>
 <a href="http://127.0.0.1:8000/GuidingPrinciples.html">this is a link to our Guiding Principles</a>
 <a href="http://127.0.0.1:8000/ShoppingList.html">Shopping List</a>
 <a href="http://127.0.0.1:8000/API.html">API</a>
