Add slides for presentation + bugs fixed to make the presentation work

--- a/testing/HTML/collaborator_demo/slide11.html
+++ b/testing/HTML/collaborator_demo/slide11.html
@@ -5,9 +5,6 @@
     <title>GAUDY - Collaboration Demonstration</title>
 </head>
 <body>
-<h1>
-    Gaudy Collaboration Demonstration
-</h1>
-<a href="slide1.html">Begin</a>
+<img src="anyquestionscat.jpg" alt="A cute cat wants to ask a question." />
 </body>
 </html>
