Fix images from relative urls & don't crash for invalid images.

--- a/testing/HTML/collaborator_demo/slide11.html
+++ b/testing/HTML/collaborator_demo/slide11.html
@@ -5,6 +5,6 @@
     <title>GAUDY - Collaboration Demonstration</title>
 </head>
 <body>
-<img src="anyquestionscat.jpg" alt="A cute cat wants to ask a question." />
+<img src="anyquestionscat.png" alt="Cat in a suit asks for questions" />
 </body>
 </html>
