--- a/testing/HTML/collaborator_demo/slide1.html
+++ b/testing/HTML/collaborator_demo/slide1.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 <h1>What is GAUDY?</h1>
-<p>
+<blockquote>
     Gaudy (adj) 1. Ostentatiously or tastelessly ornamented.
     2. Marked by extravagance or sometimes tasteless showiness. - Merriam-Webster
-</p>
+</blockquote>
 <br />
 <ul>
     <li>Alternative Web browser, competing with Chrome, Firefox, and Safari.</li>
