--- a/testing/HTML/collaborator_demo/slide4.html
+++ b/testing/HTML/collaborator_demo/slide4.html
@@ -7,9 +7,9 @@
 <body>
 <h1>Colours and Fonts</h1>
 <p>
-    We use colour as a way to distinguish different types of elements. In keeping with our theme, we try to use
-    contrasting colours where possible, and stick to variations of the primary colours (red, green, and blue) and the
-    secondary colours (cyan, magenta, and yellow).
+    Colours were chosen to fit our aesthetic while also making it easy to distinguish components at a glance.
+    We use bright colours as much as possible - generally, the more important something is, the more its colour
+    will stand out.
 </p>
 <br />
 <p>
@@ -29,10 +29,10 @@
     looks a little bit like handwriting. We find it easy to read, even at very small sizes.
 </p>
 <br />
-<span>
+<blockquote>
     When a bit more formality is required, we use a serif font called 'Kurale'. It looks distinguished, but still fun
     and cute.
-</span>
+</blockquote>
 <br />
 <pre>
     We use the monospace font 'Kode Mono' inside &lt;pre&gt; tags. When we read it we feel digital and computery.
