--- a/testing/HTML/collaborator_demo/slide5.html
+++ b/testing/HTML/collaborator_demo/slide5.html
@@ -15,10 +15,8 @@
     and colours to distinguish them.
 </p>
 <p>
-    GAUDY also caches previously visited pages (within a session), and can move back and forward through
-    the site history. Although revisiting a page doesn't download more data, it can still take a moment when there's
-    a lot of content - this proof of concept isn't very fast. <br />
-    If you look next to the address entry field you can see the navigation buttons - 'Back', 'Forward', and 'Go'.
+    Page data is stored for the browsing session, so that you can revisit pages more quickly. Bigger pages still
+    take a little while to load though.
 </p>
 <a href="slide6.html">Continue</a>
 </body>
