--- a/testing/HTML/collaborator_demo/slide7.html
+++ b/testing/HTML/collaborator_demo/slide7.html
@@ -17,7 +17,7 @@
 </p>
 <h2>Collaborator</h2>
 <p>
-    The conductor mode connects to a collaborator, and when the conductor visits a page, the collaborator also
+    The collaborator mode connects to a conductor, and when the conductor visits a page, the collaborator also
     views it. Friends or colleagues can share a web browsing session while limiting access to just viewing the page.
 </p>
 <br />
