--- a/testing/HTML/collaborator_demo/slide8.html
+++ b/testing/HTML/collaborator_demo/slide8.html
@@ -11,18 +11,12 @@
     to improving security and avoiding embarrassment.
 </p>
 <br />
-<p>
-    The collaborator and conductor each have their own independent view of the page, and can resize it, or scroll
-    through the document without affecting each other. They can even have different colour schemes.<br />
-    This is particularly important when devices are using different font scaling - many devices now have high
-    density displays and increase font scaling appropriately, and other people use extra-large text for accessibility.
-</p>
-<br />
-<p>
-    The aim of this proof of concept was to demonstrate the session sharing functionality. But we don't want to stop
-    there. The ultimate aim is to make collaborative working easier by allowing collaborators to help drive the
-    session, not just sit in the back seat.
-</p>
+<ul>
+    <li>Collaborator and conductor have their own view.</li>
+    <li>Can be resized or view different parts of the document independently.</li>
+    <li>Important when using different text size.</li>
+    <li>Or when using dark mode!</li>
+</ul>
 <a href="slide9.html">Continue</a>
 </body>
 </html>
