--- a/testing/HTML/collaborator_demo/slide6.html
+++ b/testing/HTML/collaborator_demo/slide6.html
@@ -2,10 +2,14 @@
 <html lang="en-AU">
 <head>
     <meta charset="UTF-8">
-    <title>GAUDY - Collaboration Demonstration : Navigation</title>
+    <title>GAUDY - Collaboration Demonstration : Over-restrictive Firewalls Make Me Sad and Ruin My Fun</title>
 </head>
 <body>
-<h1>Buttons? What Buttons? I don't see any buttons?</h1>
-<a href="slide7.html">?????</a>
+<h1>There was going to be an epic reveal here</h1>
+<p>(Un)fotunately, FDM has a firewall on the coporoate network which prevents us from establishing connections between the office computers.</p>
+<p>Imagine that up until this point the user interface was only the address bar.</p>
+<br />
+<h1>Buttons?? What Buttons????</h1>
+<a href="slide7.html">??????</a>
 </body>
 </html>
