--- a/testing/HTML/collaborator_demo/slide7.html
+++ b/testing/HTML/collaborator_demo/slide7.html
@@ -7,8 +7,7 @@
 <body>
 <h1>Collaborator & Conductor</h1>
 <p>
-    Until now, we've been presenting this with the Collaborator mode! GAUDY has two killer features; bright colours,
-    and friendship!
+    GAUDY has two killer features; bright colours, and friendship!
 </p>
 <h2>Conductor</h2>
 <p>
