fix dark mode button colours

--- a/testing/HTML/testPage.html
+++ b/testing/HTML/testPage.html
@@ -20,5 +20,7 @@
 <a href="http://127.0.0.1:8000/GuidingPrinciples.html">this is a link to our Guiding Principles</a>
 <a href="http://127.0.0.1:8000/ShoppingList.html">Shopping List</a>
 <a href="http://127.0.0.1:8000/API.html">API</a>
+<a href="image.html">image</a>
+<a href="https://www.draac.com/htmlextratablepage.html">public website</a>
 <a href="collaborator_demo/slide0.html">Collaborator Demo</a>
 </body>
