Add title text & alt text to images.

--- a/testing/HTML/testPage.html
+++ b/testing/HTML/testPage.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 <!-- this is a comment -->
+<a href="https://xkcd.com">XKCD</a>
 <div>
     this is a division containing headings
     <h1>h1</h1>
