--- a/testing/HTML/collaborator_demo/slide6.html
+++ b/testing/HTML/collaborator_demo/slide6.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <h1>There was going to be an epic reveal here</h1>
-<p>(Un)fotunately, FDM has a firewall on the coporoate network which prevents us from establishing connections between the office computers.</p>
-<p>Imagine that up until this point the user interface was only the address bar.</p>
+<p>(Un)fotunately, FDM has a firewall on the corporate network which prevents us from establishing connections between the office computers.</p>
+<p>Please imagine that until now only the address entry field was visible in the user interface.</p>
 <br />
 <h1>Buttons?? What Buttons????</h1>
 <a href="slide7.html">??????</a>
