add styling for various element types

--- a/testing/HTML/testPage.html
+++ b/testing/HTML/testPage.html
@@ -16,6 +16,7 @@
     <h6>h6</h6>
 </div>
 <hr>
+<blockquote>this is a blockquote</blockquote>
 <p>this is a paragraph <span> this is a span inside the paragraph</span></p>
 <p> test emoji 😂</p>
 <a href="http://127.0.0.1:8000/GuidingPrinciples.html">this is a link to our Guiding Principles</a>
