--- a/testing/HTML/testPage.html
+++ b/testing/HTML/testPage.html
@@ -14,6 +14,7 @@
     <h4>h4</h4>
     <h5>h5</h5>
     <h6>h6</h6>
+    <span> this is a span in the division</span>
 </div>
 <hr>
 <blockquote>this is a blockquote</blockquote>
@@ -25,4 +26,5 @@
 <a href="image.html">image</a>
 <a href="https://www.draac.com/htmlextratablepage.html">public website</a>
 <a href="collaborator_demo/slide0.html">Collaborator Demo</a>
+<p>spacing test paragraph</p>
 </body>
