hr adjusts with screen size and borders on background boxs can be controlled

--- a/testing/HTML/testPage.html
+++ b/testing/HTML/testPage.html
@@ -20,11 +20,11 @@
 <blockquote>this is a blockquote</blockquote>
 <p>this is a paragraph <span> this is a span inside the paragraph</span></p>
 <p> test emoji 😂</p>
-<a href="http://127.0.0.1:8000/GuidingPrinciples.html">this is a link to our Guiding Principles</a>
-<a href="http://127.0.0.1:8000/ShoppingList.html">Shopping List</a>
-<a href="http://127.0.0.1:8000/API.html">API</a>
-<a href="image.html">image</a>
-<a href="https://www.draac.com/htmlextratablepage.html">public website</a>
-<a href="collaborator_demo/slide0.html">Collaborator Demo</a>
+<a href="http://127.0.0.1:8000/GuidingPrinciples.html">this is a link to our Guiding Principles</a>,
+<a href="http://127.0.0.1:8000/ShoppingList.html">Shopping List</a>,
+<a href="http://127.0.0.1:8000/API.html">API</a>,
+<a href="image.html">image</a>,
+<a href="https://www.draac.com/htmlextratablepage.html">public website</a>,
+<a href="collaborator_demo/slide0.html">Collaborator Demo</a>,
 <p>spacing test paragraph</p>
 </body>
