image loading partial functionality

--- a/testing/HTML/image.html
+++ b/testing/HTML/image.html
@@ -4,6 +4,6 @@
     <title>image Page</title>
 </head>
 <body>
-<img src="file:icons/bingus.png">
+<img src="file:icons/bingus.png" alt="an image of the bingus">
 </body>
 </html>
